<resources>
    <string name="app_name">Windchill Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="text_welcome">Welcome to the Windchill Calculator, Yo!</string>
    <string name="text_instructions">Enter outside temperature and windspeed to calculate the windchill factor</string>
    <string name="edit_hint_temp">Temperature</string>
    <string name="edit_hint_wind_speed">Wind speed</string>
    <string name="button_submit">Get Windchill</string>
    <string name="text_results">Results: </string>
</resources>
